update pins for stm32f4

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,7 @@ lib_deps =
 
 [env:nucleo]
 platform = ststm32
-board = nucleo_f411re
+board = adafruit_feather_f405
 framework = arduino
 build_flags = 
 	-D PIO_FRAMEWORK_ARDUINO_NANOLIB_FLOAT_PRINTF
