set up lps25 and ublox.

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,8 @@ build_flags =
 	-D USBCON
 lib_deps = 
 	https://github.com/haloship/RadioHead.git
+	adafruit/Adafruit LPS2X@^2.0.1
+	sparkfun/SparkFun u-blox GNSS Arduino Library@^2.0.5
 
 [env:nucleo]
 platform = ststm32
@@ -30,4 +32,5 @@ build_flags =
 	-D PIO_FRAMEWORK_ARDUINO_USB_HIGHSPEED
 lib_deps = 
 	https://github.com/haloship/RadioHead.git
-		
+	adafruit/Adafruit LPS2X@^2.0.1
+	sparkfun/SparkFun u-blox GNSS Arduino Library@^2.0.5
