Temporary config updates

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,14 +13,16 @@ platform = ststm32
 board = haloship
 framework = arduino
 upload_protocol = stlink
-debug_speed = 500
+debug_speed = 480
 build_flags = 
 	-D PIO_FRAMEWORK_ARDUINO_NANOLIB_FLOAT_PRINTF
 	-D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
 	-D USBCON
 lib_deps = 
-	robtillaart/PCA9635 @ ^0.3.1
-	https://github.com/adafruit/Adafruit_LPS2X.git
+	; robtillaart/PCA9635 @ ^0.3.1
+	; https://github.com/adafruit/Adafruit_LPS2X.git
+	https://github.com/haloship/RadioHead.git
+
 
 [env:feather]
 platform = ststm32
