Add build flag to differentiate between feather and haloship

--- a/platformio.ini
+++ b/platformio.ini
@@ -33,6 +33,7 @@ build_flags =
 	-D PIO_FRAMEWORK_ARDUINO_NANOLIB_FLOAT_PRINTF
 	-D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
 	-D USBCON
+	-D FEATHER_BOARD
 lib_deps = 
 	https://github.com/haloship/RadioHead.git
 	adafruit/Adafruit LPS2X@^2.0.1
