--- a/platformio.ini
+++ b/platformio.ini
@@ -13,15 +13,21 @@ platform = ststm32
 board = haloship
 framework = arduino
 upload_protocol = stlink
+; upload_protocol = dfu
+debug_tool = stlink
 debug_speed = 480
 build_flags = 
 	-D PIO_FRAMEWORK_ARDUINO_NANOLIB_FLOAT_PRINTF
 	-D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
 	-D USBCON
 lib_deps = 
-	; robtillaart/PCA9635 @ ^0.3.1
-	; https://github.com/adafruit/Adafruit_LPS2X.git
-	https://github.com/haloship/RadioHead.git
+	arkhipenko/TaskScheduler @ ^3.2.2
+	robtillaart/PCA9635 @ ^0.3.1
+	; sparkfun/SparkFun u-blox GNSS Arduino Library@^2.0.5
+	; adafruit/Adafruit LPS2X @ ^2.0.1
+	; https://github.com/haloship/RadioHead.git
+
+
 
 
 [env:feather]
