--- a/platformio.ini
+++ b/platformio.ini
@@ -23,12 +23,10 @@ build_flags =
 lib_deps = 
 	arkhipenko/TaskScheduler @ ^3.2.2
 	robtillaart/PCA9635 @ ^0.3.1
+	stm32duino/STM32duino LPS25HB @ ^2.0.0
 	; sparkfun/SparkFun u-blox GNSS Arduino Library@^2.0.5
 	; adafruit/Adafruit LPS2X @ ^2.0.1
 	; https://github.com/haloship/RadioHead.git
-
-
-
 
 [env:feather]
 platform = ststm32
