Transceiver receive messages

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,10 +23,9 @@ build_flags =
 lib_deps = 
 	arkhipenko/TaskScheduler @ ^3.2.2
 	robtillaart/PCA9635 @ ^0.3.1
-	stm32duino/STM32duino LPS25HB @ ^2.0.0
+	adafruit/Adafruit LPS2X @ ^2.0.1
+	https://github.com/haloship/RadioHead.git
 	; sparkfun/SparkFun u-blox GNSS Arduino Library@^2.0.5
-	; adafruit/Adafruit LPS2X @ ^2.0.1
-	; https://github.com/haloship/RadioHead.git
 
 [env:feather]
 platform = ststm32
@@ -38,6 +37,7 @@ build_flags =
 	-D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
 	-D USBCON
 	-D FEATHER_BOARD
+	-Wall
 lib_deps = 
 	https://github.com/haloship/RadioHead.git
 	adafruit/Adafruit LPS2X@^2.0.1
