--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:haloship]
-platform = ststm32
+platform = ststm32@13.0.0
 board = haloship
 framework = arduino
 upload_protocol = stlink
@@ -24,8 +24,13 @@ lib_deps =
 	arkhipenko/TaskScheduler @ ^3.2.2
 	robtillaart/PCA9635 @ ^0.3.1
 	adafruit/Adafruit LPS2X @ ^2.0.1
+	lowpowerlab/SPIFlash @ ^101.1.3
 	https://github.com/haloship/RadioHead.git
+	; https://github.com/haloship/bmx055.git	
 	; sparkfun/SparkFun u-blox GNSS Arduino Library@^2.0.5
+lib_extra_dirs=
+	/home/dunstan/git/bmx055
+lib_ldf_mode = deep
 
 [env:feather]
 platform = ststm32
