--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,8 @@
 platform = ststm32@13.0.0
 board = haloship
 framework = arduino
-upload_protocol = stlink
-; upload_protocol = dfu
+; upload_protocol = stlink
+upload_protocol = dfu
 debug_tool = stlink
 debug_speed = 480
 build_flags = 
@@ -25,12 +25,13 @@ lib_deps =
 	robtillaart/PCA9635 @ ^0.3.1
 	adafruit/Adafruit LPS2X @ ^2.0.1
 	lowpowerlab/SPIFlash @ ^101.1.3
+	; https://github.com/sparkfun/SparkFun_u-blox_GNSS_Arduino_Library.git
 	https://github.com/haloship/RadioHead.git
 	; https://github.com/haloship/bmx055.git	
-	; sparkfun/SparkFun u-blox GNSS Arduino Library@^2.0.5
 lib_extra_dirs=
 	/home/dunstan/git/bmx055
 lib_ldf_mode = deep
+build_unflags = -Werror=all
 
 [env:feather]
 platform = ststm32
