--- a/platformio.ini
+++ b/platformio.ini
@@ -20,12 +20,13 @@ build_flags =
 	-D PIO_FRAMEWORK_ARDUINO_NANOLIB_FLOAT_PRINTF
 	-D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
 	-D USBCON
+	-Wno-deprecated-declarations
 lib_deps = 
 	arkhipenko/TaskScheduler @ ^3.2.2
 	robtillaart/PCA9635 @ ^0.3.1
 	adafruit/Adafruit LPS2X @ ^2.0.1
 	lowpowerlab/SPIFlash @ ^101.1.3
-	; https://github.com/sparkfun/SparkFun_u-blox_GNSS_Arduino_Library.git
+	https://github.com/sparkfun/SparkFun_u-blox_GNSS_Arduino_Library.git
 	https://github.com/haloship/RadioHead.git
 	; https://github.com/haloship/bmx055.git	
 lib_extra_dirs=
